# 814-2-cpp

./: CMakeLists.txt  README.md
Includes/game/: Board.hpp
Includes/solver/: Genetic.hpp  LocalMinimizer.hpp  ThreadPool.hpp
Sources/game/: Board.cc  CMakeLists.txt
Sources/solver/: CMakeLists.txt  Genetic.cc  LocalMinimizer.cc  main.cc
